--- a/about.html
+++ b/about.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<!-- linking the css file -->
+<html lang="en-US">
+	<head>
+		<!-- linking the css file -->
 
 <link rel="stylesheet" type="text/css" href="styles/first.css">
-	<title>
-		USEFULL LINKS
-	</title>
+		<!-- This sets the character set -->
+		<meta charset="utf-8">
+		<!-- and this is the title -->
+
+		<title> About </title>
+
 	</head>
+
 	<body>
 
 		<!-- NAVIGATION BAR -->
@@ -25,17 +29,27 @@
 
   <li><a href="portfolio.html">PORTFOLIO</a></li>
 
-
-
  <li style="float:right"><a class="active" href="contact.html">CONTACTS</a></li>
 </ul>
  <!-- End of navigation bar -->
 
+		<!-- We will write a content going here, and talking about the porpose of this website. -->
 		<p>
-			body content goes here.
+			This website is about its author and the porpose of its creation.
+		</p>
+		<!-- 2nd paragraph -->
+		<p>
+			2nd paragraph goes here.
+		</p>
+		<!-- 3rd paragraph -->
+		<p>
+			3rd paragraph goes here.
+		</p>
+		<!-- wrinting fourth paragragh -->
+		<p>
+			Fourth paragraph's content goes here.
 		</p>
 		
 	</body>
-
 
 </html>
