--- a/contact.html
+++ b/contact.html
@@ -32,8 +32,13 @@
  <!-- End of navigation bar -->
 
 		<p>
-			body content goes here.
+			<h4>
+			We can be contacted through <a href ="mailto: thiernodiallo864@gmail.com? subject = subsubject text">email</a> 
+			or by calling +1 347-613-7781. Thanks for your business.
 		</p>
+
+		
+
 		
 	</body>
 
