--- a/index.html
+++ b/index.html
@@ -1,19 +1,56 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="en-US">
 
 <head>
+
+	<!-- This sets the character set -->
+
+		<meta charset="utf-8">
+
+<!-- linking the css file -->
+
+<link rel="stylesheet" type="text/css" href="styles/first.css">
+
     <title>
         Thierno_Tabe
     </title>
 </head>
 
 <body>
-    <h1> Hello world ! </h1>
-    <h2>My name is Thierno, and</h2>
-    <h2>this is my first website
-    </h2>
+  
+	<!-- NAVIGATION BAR -->
+
+	<ul id ="One">
+  <li><a href="index.html">HOME</a></li>
+
+  <li><a href="about.html">ABOUT</a></li>
+
+  <li><a href="resume.html">RESUME</a></li>
+
+  <li><a href="usefulLinks.html">USEFUL LINKS</a></li>
+
+  <li><a href="projects.html">PROJECTS</a></li>
+  
+   <li><a href="portfolio.html">PORTFOLIO</a></li>
+
+
+
+ <li style="float:right"><a class="active" href="contact.html">CONTACTS</a></li>
+</ul>
+
+
+	<!-- Linking the image file -->
+
     <img src="images/Thierno.jpg">
-    style="width:120px;height:150px"
+
+
+    <!-- linking the java script file-->
+
+    <script src="scripts/first.js"></script>
+
+
+
 </body>
 
 </html>
