--- a/projects.html
+++ b/projects.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<!-- linking the css file -->
 
+  <head>
+ 
+
+    <meta charset="utf-8">
+    
+    <!-- linking the css file -->
 <link rel="stylesheet" type="text/css" href="styles/first.css">
-	<title>
-		USEFULL LINKS
-	</title>
-	</head>
-	<body>
 
-		<!-- NAVIGATION BAR -->
+
+    <title>
+    Projects</title>
+
+  </head>
+
+  <body>
+
+  	<!-- NAVIGATION BAR -->
 
 	<ul id ="One">
   <li><a href="index.html">HOME</a></li>
@@ -31,11 +38,8 @@
 </ul>
  <!-- End of navigation bar -->
 
-		<p>
-			body content goes here.
-		</p>
-		
-	</body>
+    <h3> I will list here the Links to projects I have worked on </h3>
 
 
+  </body>
 </html>
